[gd_scene load_steps=19 format=3 uid="uid://brl4o8bcv2k2j"]

[ext_resource type="Script" path="res://GameElements/Game/GameOverScreen.gd" id="1_tcqug"]
[ext_resource type="Texture2D" uid="uid://bj1sf6iw1kpa3" path="res://Assets/UI/end_screen.png" id="2_6n8n7"]
[ext_resource type="Texture2D" uid="uid://ispx11saoeqv" path="res://Assets/UI/map_selection_button/star_locked.png" id="3_ab4u4"]
[ext_resource type="Texture2D" uid="uid://bm7v4e5n4j7xv" path="res://Assets/UI/map_selection_button/star_unlocked.png" id="4_ih4p6"]
[ext_resource type="FontFile" uid="uid://da8dsj4hcjptk" path="res://Assets/SuperMilk-nRq9Y.ttf" id="5_pqxqf"]
[ext_resource type="Texture2D" uid="uid://dmdsrjbg2gy0w" path="res://Assets/UI/game_over/try_again.png" id="6_l0yne"]
[ext_resource type="Texture2D" uid="uid://bricycydtjvon" path="res://Assets/UI/game_over/try_again_click.png" id="7_xwbi6"]
[ext_resource type="Texture2D" uid="uid://ny4aky6krl1f" path="res://Assets/UI/game_over/try_again_hover.png" id="8_744j6"]
[ext_resource type="Texture2D" uid="uid://dmtdypyvlaiel" path="res://Assets/UI/game_over/quit.png" id="12_m0fv3"]
[ext_resource type="Texture2D" uid="uid://bod5ko41214d2" path="res://Assets/UI/game_over/quit_click.png" id="13_5k82w"]
[ext_resource type="Texture2D" uid="uid://drtxgp28wagps" path="res://Assets/UI/game_over/quit_hover.png" id="14_g1mxd"]
[ext_resource type="AudioStream" uid="uid://b7jnbe3gxscrj" path="res://Assets/audio/Game_Over_1.wav" id="15_ef4uu"]

[sub_resource type="Animation" id="Animation_mxxav"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HBoxContainer/Star_1:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_ab4u4")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HBoxContainer/Star_2:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_ab4u4")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HBoxContainer/Star_3:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_ab4u4")]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("..:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1e-05)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../..:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_k5dgm"]
resource_name = "show_first_star"
length = 10.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HBoxContainer/Star_1:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("3_ab4u4"), ExtResource("4_ih4p6")]
}

[sub_resource type="Animation" id="Animation_641w6"]
resource_name = "show_game_over"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7, 1),
"transitions": PackedFloat32Array(0.34151, 0.25, 0.25),
"update": 0,
"values": [Vector2(1, 1e-05), Vector2(1, 1.05), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../..:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_777lq"]
resource_name = "show_second_star"
length = 10.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HBoxContainer/Star_1:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("3_ab4u4"), ExtResource("4_ih4p6")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HBoxContainer/Star_2:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("3_ab4u4"), ExtResource("4_ih4p6")]
}

[sub_resource type="Animation" id="Animation_wfmp0"]
resource_name = "show_third_star"
length = 10.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HBoxContainer/Star_1:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("3_ab4u4"), ExtResource("4_ih4p6")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HBoxContainer/Star_2:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("3_ab4u4"), ExtResource("4_ih4p6")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HBoxContainer/Star_3:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("3_ab4u4"), ExtResource("4_ih4p6")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6v0rh"]
_data = {
"RESET": SubResource("Animation_mxxav"),
"show_first_star": SubResource("Animation_k5dgm"),
"show_game_over": SubResource("Animation_641w6"),
"show_second_star": SubResource("Animation_777lq"),
"show_third_star": SubResource("Animation_wfmp0")
}

[node name="GameOverScreen" type="CanvasLayer"]
process_mode = 3
layer = 6
visible = false
script = ExtResource("1_tcqug")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -377.5
offset_top = -371.0
offset_right = 377.5
offset_bottom = 371.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1, 1e-05)
pivot_offset = Vector2(377, 370)
texture = ExtResource("2_6n8n7")

[node name="MarginContainer" type="MarginContainer" parent="TextureRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -157.0
offset_top = -169.0
offset_right = 157.0
offset_bottom = 161.0
grow_horizontal = 2
theme_override_constants/margin_top = 250

[node name="HBoxContainer" type="HBoxContainer" parent="TextureRect/MarginContainer"]
layout_mode = 2

[node name="Star_1" type="TextureRect" parent="TextureRect/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
texture = ExtResource("3_ab4u4")

[node name="Star_2" type="TextureRect" parent="TextureRect/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
texture = ExtResource("3_ab4u4")

[node name="Star_3" type="TextureRect" parent="TextureRect/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
texture = ExtResource("3_ab4u4")

[node name="GameOverAnimation" type="AnimationPlayer" parent="TextureRect/MarginContainer"]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_6v0rh")
}

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -208.0
offset_top = -191.0
offset_right = 208.0
offset_bottom = 191.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameOverTitle" type="Label" parent="TextureRect/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("5_pqxqf")
theme_override_font_sizes/font_size = 68
text = "Game Over"

[node name="ScoreLabel" type="Label" parent="TextureRect/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_font_sizes/font_size = 26
text = "You survived :
"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="TextureRect/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 40

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="RestartButton" type="TextureButton" parent="TextureRect/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_stretch_ratio = 0.0
texture_normal = ExtResource("6_l0yne")
texture_pressed = ExtResource("7_xwbi6")
texture_hover = ExtResource("8_744j6")

[node name="QuitToMenu" type="TextureButton" parent="TextureRect/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_stretch_ratio = 0.0
texture_normal = ExtResource("12_m0fv3")
texture_pressed = ExtResource("13_5k82w")
texture_hover = ExtResource("14_g1mxd")

[node name="GameOverPlayer" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("15_ef4uu")

[connection signal="pressed" from="TextureRect/VBoxContainer/MarginContainer/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/MarginContainer/VBoxContainer/QuitToMenu" to="." method="_on_quit_to_menu_pressed"]
